--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script type="text/babel">
         // PASTE EVERYTHING FROM YOUR PDF BELOW THIS LINE
         // (Starting from: import React... all the way to the end)
-import React, { useState, useEffect } from 'react';
+        import React, { useState, useEffect } from 'react';
 import { Shuffle, Settings, Eye, EyeOff, Maximize, Minimize, Lock, Unlock, Plus, Trash2, Save, BookmarkPlus, HelpCircle } from 'lucide-react';
 
 const THEME_COLORS = {
@@ -414,184 +414,7 @@ const JazzPracticeApp = () => {
             <div className="space-y-4">
               <div>
                 <label className="text-gray-700 text-sm mb-2 block font-medium">Section Name</label>
-                <input type="text" value={editForm.name} onChange={(e) => setEditForm({ ...editForm, name: e.target.value })} className="w-full bg-gray-50 text-gray-900 p-3 rounded-lg border border-gray-200 focus:border-blue-500 focus:outline-none focus:ring-2 focus:ring-blue-200" />
-              </div>
-              <div>
-                <label className="text-gray-700 text-sm mb-2 block font-medium">Options (comma-separated)</label>
-                <textarea value={editForm.options} onChange={(e) => setEditForm({ ...editForm, options: e.target.value })} className="w-full bg-gray-50 text-gray-900 p-3 rounded-lg border border-gray-200 focus:border-blue-500 focus:outline-none focus:ring-2 focus:ring-blue-200 min-h-32" />
-              </div>
-              <div className="flex items-center gap-2">
-                <input type="checkbox" id="isWide" checked={editForm.isWide} onChange={(e) => setEditForm({ ...editForm, isWide: e.target.checked })} className="w-4 h-4 rounded border-gray-300" />
-                <label htmlFor="isWide" className="text-gray-700 text-sm">Full Width Section (spans both columns)</label>
-              </div>
-            </div>
-            <div className="flex gap-3 mt-6">
-              <button onClick={saveEdit} className={`flex-1 ${theme.primary} text-white py-2.5 rounded-lg ${theme.hover} transition-all font-semibold shadow-md`}>Save</button>
-              <button onClick={cancelEdit} className="flex-1 bg-gray-100 text-gray-700 py-2.5 rounded-lg hover:bg-gray-200 transition-all font-semibold">Cancel</button>
-            </div>
-          </div>
-        </div>
-      )}
-
-      {showAddModal && (
-        <div className="fixed inset-0 bg-black/50 backdrop-blur-sm flex items-center justify-center p-4 z-50">
-          <div className="bg-white rounded-lg p-6 max-w-md w-full border border-gray-200 shadow-xl">
-            <h3 className="text-xl font-semibold text-gray-900 mb-4">Add New Section</h3>
-            <div className="space-y-4">
-              <div>
-                <label className="text-gray-700 text-sm mb-2 block font-medium">Section Name</label>
-                <input type="text" value={editForm.name} onChange={(e) => setEditForm({ ...editForm, name: e.target.value })} className="w-full bg-gray-50 text-gray-900 p-3 rounded-lg border border-gray-200 focus:border-blue-500 focus:outline-none focus:ring-2 focus:ring-blue-200" />
-              </div>
-              <div>
-                <label className="text-gray-700 text-sm mb-2 block font-medium">Options (comma-separated)</label>
-                <textarea value={editForm.options} onChange={(e) => setEditForm({ ...editForm, options: e.target.value })} className="w-full bg-gray-50 text-gray-900 p-3 rounded-lg border border-gray-200 focus:border-blue-500 focus:outline-none focus:ring-2 focus:ring-blue-200 min-h-32" />
-              </div>
-              <div className="flex items-center gap-2">
-                <input type="checkbox" id="isWideAdd" checked={editForm.isWide} onChange={(e) => setEditForm({ ...editForm, isWide: e.target.checked })} className="w-4 h-4 rounded border-gray-300" />
-                <label htmlFor="isWideAdd" className="text-gray-700 text-sm">Full Width Section (spans both columns)</label>
-              </div>
-            </div>
-            <div className="flex gap-3 mt-6">
-              <button onClick={addNewSection} className={`flex-1 ${theme.primary} text-white py-2.5 rounded-lg ${theme.hover} transition-all font-semibold shadow-md`}>Add</button>
-              <button onClick={() => { setShowAddModal(false); setEditForm({ name: '', options: '', isWide: false }); }} className="flex-1 bg-gray-100 text-gray-700 py-2.5 rounded-lg hover:bg-gray-200 transition-all font-semibold">Cancel</button>
-            </div>
-          </div>
-        </div>
-      )}
-
-      {showPresetModal && (
-        <div className="fixed inset-0 bg-black/50 backdrop-blur-sm flex items-center justify-center p-4 z-50">
-          <div className="bg-white rounded-lg p-6 max-w-md w-full border border-gray-200 shadow-xl">
-            <h3 className="text-xl font-semibold text-gray-900 mb-4">Presets</h3>
-            <div className="mb-4 space-y-2">
-              <button onClick={() => { setShowPresetModal(false); setShowSavePresetModal(true); }} className={`w-full flex items-center justify-center gap-2 ${theme.primary} text-white py-2.5 rounded-lg ${theme.hover} transition-all font-semibold shadow-md`}><Save size={16} /> Save Current Setup</button>
-              <button onClick={() => { setShowPresetModal(false); setShowThemeModal(true); }} className="w-full flex items-center justify-center gap-2 bg-gray-100 text-gray-700 py-2.5 rounded-lg hover:bg-gray-200 transition-all font-semibold">🎨 Theme Color</button>
-            </div>
-            <div className="space-y-2 max-h-64 overflow-y-auto">
-              {Object.keys(presets).length === 0 ? (
-                <p className="text-gray-500 text-sm text-center py-4">No presets saved</p>
-              ) : (
-                Object.keys(presets).map(k => (
-                  <div key={k} className="flex items-center justify-between bg-gray-50 p-3 rounded-lg border border-gray-200">
-                    <button onClick={() => loadPreset(k)} className="flex-1 text-left text-gray-900 hover:text-blue-600 transition-colors font-medium">{k}</button>
-                    <button onClick={(e) => { e.stopPropagation(); deletePreset(k); }} className="p-1.5 rounded transition-all bg-red-100 text-red-600 hover:bg-red-200 ml-2"><Trash2 size={14} /></button>
-                  </div>
-                ))
-              )}
-            </div>
-            <button onClick={() => setShowPresetModal(false)} className="w-full bg-gray-100 text-gray-700 py-2.5 rounded-lg hover:bg-gray-200 transition-all font-semibold mt-4">Close</button>
-          </div>
-        </div>
-      )}
-
-      {showSavePresetModal && (
-        <div className="fixed inset-0 bg-black/50 backdrop-blur-sm flex items-center justify-center p-4 z-50">
-          <div className="bg-white rounded-lg p-6 max-w-md w-full border border-gray-200 shadow-xl">
-            <h3 className="text-xl font-semibold text-gray-900 mb-4">Save Preset</h3>
-            <p className="text-gray-600 text-sm mb-4">Saves which sections are visible and locked</p>
-            <div>
-              <label className="text-gray-700 text-sm mb-2 block font-medium">Preset Name</label>
-              <input type="text" value={presetName} onChange={(e) => setPresetName(e.target.value)} className="w-full bg-gray-50 text-gray-900 p-3 rounded-lg border border-gray-200 focus:border-blue-500 focus:outline-none focus:ring-2 focus:ring-blue-200" />
-            </div>
-            <div className="flex gap-3 mt-6">
-              <button onClick={savePreset} className={`flex-1 ${theme.primary} text-white py-2.5 rounded-lg ${theme.hover} transition-all font-semibold shadow-md`}>Save</button>
-              <button onClick={() => { setShowSavePresetModal(false); setPresetName(''); setShowPresetModal(true); }} className="flex-1 bg-gray-100 text-gray-700 py-2.5 rounded-lg hover:bg-gray-200 transition-all font-semibold">Cancel</button>
-            </div>
-          </div>
-        </div>
-      )}
-
-      {showThemeModal && (
-        <div className="fixed inset-0 bg-black/50 backdrop-blur-sm flex items-center justify-center p-4 z-50">
-          <div className="bg-white rounded-lg p-6 max-w-md w-full border border-gray-200 shadow-xl">
-            <h3 className="text-xl font-semibold text-gray-900 mb-4">Choose Theme Color</h3>
-            <div className="grid grid-cols-2 gap-3 mb-4">
-              {Object.entries(THEME_COLORS).map(([key, color]) => (
-                <button key={key} onClick={() => setThemeColor(key)} className={`${color.primary} ${color.hover} text-white py-3 px-4 rounded-lg transition-all font-semibold shadow-md ${themeColor === key ? 'ring-2 ring-offset-2 ring-gray-900' : ''}`}>
-                  {color.name}
-                </button>
-              ))}
-            </div>
-            <button onClick={() => { setShowThemeModal(false); setShowPresetModal(true); }} className="w-full bg-gray-100 text-gray-700 py-2.5 rounded-lg hover:bg-gray-200 transition-all font-semibold">Done</button>
-          </div>
-        </div>
-      )}
-
-      {showHelpModal && (
-        <div className="fixed inset-0 bg-black/50 backdrop-blur-sm flex items-center justify-center p-4 z-50">
-          <div className="bg-white rounded-lg p-6 max-w-lg w-full border border-gray-200 shadow-xl">
-            <h3 className="text-xl font-semibold text-gray-900 mb-4">Gestures & Features</h3>
-            <div className="space-y-4 text-gray-700 max-h-96 overflow-y-auto">
-              <div>
-                <h4 className="font-semibold text-gray-900 mb-2">📱 Touch Gestures</h4>
-                <ul className="space-y-1 text-sm">
-                  <li><strong>Drag & Drop</strong> - In edit mode, drag sections to reorder</li>
-                </ul>
-              </div>
-              <div>
-                <h4 className="font-semibold text-gray-900 mb-2">✨ Features</h4>
-                <ul className="space-y-1 text-sm">
-                  <li><strong>Visual Flash</strong> - Blue ring flashes when randomizing</li>
-                  <li><strong>Lock Sections</strong> - Click lock icon to keep a value fixed</li>
-                  <li><strong>Quick Preset Tabs</strong> - One-tap preset switching at the top</li>
-                  <li><strong>Persistent Full Screen</strong> - App remembers your preference</li>
-                  <li><strong>Theme Colors</strong> - 10 beautiful muted tones</li>
-                  <li><strong>Preset Fade Effect</strong> - Presets fade as they scroll off screen</li>
-                  <li><strong>Full-Width Sections</strong> - Tune names span entire width</li>
-                  <li><strong>Drag to Reorder</strong> - In edit mode, drag sections to change position</li>
-                </ul>
-              </div>
-              <div>
-                <h4 className="font-semibold text-gray-900 mb-2">💡 Tips</h4>
-                <ul className="space-y-1 text-sm">
-                  <li>Create presets for different practice routines</li>
-                  <li>Lock sections to focus on specific elements</li>
-                  <li>Hide sections you don't need for cleaner view</li>
-                  <li>Use full screen mode when practicing away from device</li>
-                  <li>Swipe horizontally to see hidden preset tabs</li>
-                </ul>
-              </div>
-            </div>
-            <button onClick={() => setShowHelpModal(false)} className="w-full bg-gray-100 text-gray-700 py-2.5 rounded-lg hover:bg-gray-200 transition-all font-semibold mt-4">Close</button>
-          </div>
-        </div>
-      )}
-
-      {deleteConfirmSection && (
-        <div className="fixed inset-0 bg-black/50 backdrop-blur-sm flex items-center justify-center p-4 z-50">
-          <div className="bg-white rounded-lg p-6 max-w-sm w-full border border-gray-200 shadow-xl">
-            <h3 className="text-xl font-semibold text-gray-900 mb-2">Delete Section?</h3>
-            <p className="text-gray-600 text-sm mb-6">
-              Are you sure you want to delete "<strong>{sections[deleteConfirmSection].name}</strong>"? This action cannot be undone.
-            </p>
-            <div className="flex gap-3">
-              <button onClick={confirmDelete} className="flex-1 bg-red-600 text-white py-2.5 rounded-lg hover:bg-red-700 transition-all font-semibold shadow-md">Delete</button>
-              <button onClick={cancelDelete} className="flex-1 bg-gray-100 text-gray-700 py-2.5 rounded-lg hover:bg-gray-200 transition-all font-semibold">Cancel</button>
-            </div>
-          </div>
-        </div>
-      )}
-
-      {deletePresetKey && (
-        <div className="fixed inset-0 bg-black/50 backdrop-blur-sm flex items-center justify-center p-4 z-50">
-          <div className="bg-white rounded-lg p-6 max-w-sm w-full border border-gray-200 shadow-xl">
-            <h3 className="text-xl font-semibold text-gray-900 mb-2">Delete Preset?</h3>
-            <p className="text-gray-600 text-sm mb-6">
-              Are you sure you want to delete the preset "<strong>{deletePresetKey}</strong>"? This action cannot be undone.
-            </p>
-            <div className="flex gap-3">
-              <button onClick={confirmDeletePreset} className="flex-1 bg-red-600 text-white py-2.5 rounded-lg hover:bg-red-700 transition-all font-semibold shadow-md">Delete</button>
-              <button onClick={cancelDeletePreset} className="flex-1 bg-gray-100 text-gray-700 py-2.5 rounded-lg hover:bg-gray-200 transition-all font-semibold">Cancel</button>
-            </div>
-          </div>
-        </div>
-      )}
-    </div>
-  );
-};
-
-export default JazzPracticeApp;
-
+                <input type="text" value={editForm.name} 
         // At the very bottom of your pasted code, add this line:
         const root = ReactDOM.createRoot(document.getElementById('root'));
         root.render(<JazzPracticeApp />);
