Add crimson and indigo color themes

--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@ const THEME_COLORS = {
     moss: { bg: 'bg-[#f6f7f2]', primary: 'bg-[#6d7a4e]', hover: 'hover:bg-[#59633f]', text: 'text-white' },
     sienna: { bg: 'bg-[#faf6f3]', primary: 'bg-[#a07158]', hover: 'hover:bg-[#865d47]', text: 'text-white' },
     teal: { bg: 'bg-[#f0f6f6]', primary: 'bg-[#4d7a7a]', hover: 'hover:bg-[#3e6363]', text: 'text-white' },
-    charcoal: { bg: 'bg-[#f5f5f5]', primary: 'bg-[#2d2d2d]', hover: 'hover:bg-[#1a1a1a]', text: 'text-white' }
+    charcoal: { bg: 'bg-[#f5f5f5]', primary: 'bg-[#2d2d2d]', hover: 'hover:bg-[#1a1a1a]', text: 'text-white' },
+    crimson: { bg: 'bg-[#fcf3f3]', primary: 'bg-[#a84d4d]', hover: 'hover:bg-[#8d3e3e]', text: 'text-white' },
+    indigo: { bg: 'bg-[#f4f5f8]', primary: 'bg-[#4e5a7a]', hover: 'hover:bg-[#3d4761]', text: 'text-white' }
 };
         const PracticeSection = ({ sectionKey, section, editMode, onToggleVisibility, onToggleLock, onEdit, onDelete, isFlashing, onDragStart, onDragOver, onDrop }) => {
             const [isOver, setIsOver] = useState(false);
