--- a/index.html
+++ b/index.html
@@ -270,4 +270,59 @@
                                     {Object.entries(THEME_COLORS).map(([k, color]) => (
                                         <button 
                                             key={k} onClick={() => setTempTheme(k)}
-                                            className=
+                                            className={`h-10 w-full rounded-md transition-all ${color.primary} ${tempTheme === k ? 'ring-offset-2 ring-2 ring-[#37352f]' : 'opacity-80 hover:opacity-100'}`}
+                                            title={color.name}
+                                        />
+                                    ))}
+                                </div>
+
+                                <div className="space-y-3 mb-8 max-h-40 overflow-y-auto pr-2">
+                                    {Object.keys(presets).map(k => (
+                                        <div key={k} className="flex items-center justify-between group">
+                                            <span className="text-sm font-medium text-[#37352f]">{k}</span>
+                                            <button onClick={() => deletePreset(k)} className="text-red-400 opacity-0 group-hover:opacity-100 p-1"><Icons.Trash2 size={14}/></button>
+                                        </div>
+                                    ))}
+                                </div>
+
+                                <div className="flex gap-3">
+                                    <button onClick={handleSavePreset} className="flex-1 bg-[#37352f] text-white py-3 rounded-xl font-bold hover:bg-[#201f1c]">Save</button>
+                                    <button onClick={() => setShowPresetManager(false)} className="flex-1 bg-[#f7f7f5] text-[#37352f] py-3 rounded-xl font-bold">Cancel</button>
+                                </div>
+                            </div>
+                        </div>
+                    )}
+
+                    {/* Simple Edit Section Modal */}
+                    {editingSection && (
+                        <div className="fixed inset-0 bg-white/80 backdrop-blur-md flex items-center justify-center p-4 z-50">
+                            <div className="bg-white rounded-2xl p-8 max-w-md w-full border border-[#e9e9e7] shadow-2xl">
+                                <h3 className="text-xl font-bold mb-6">Edit Section</h3>
+                                <input className="w-full bg-[#f7f7f5] border border-[#e9e9e7] p-3 rounded-lg mb-4" value={editForm.name} onChange={e => setEditForm({...editForm, name: e.target.value})} />
+                                <textarea className="w-full bg-[#f7f7f5] border border-[#e9e9e7] p-3 rounded-lg mb-4 h-32" value={editForm.options} onChange={e => setEditForm({...editForm, options: e.target.value})} />
+                                <div className="flex gap-3">
+                                    <button onClick={() => {
+                                        const opts = editForm.options.split(',').map(o => o.trim()).filter(o => o.length);
+                                        setSections(p => ({...p, [editingSection]: {...p[editingSection], name: editForm.name, options: opts, current: opts[0]}}));
+                                        setEditingSection(null);
+                                    }} className="flex-1 bg-[#37352f] text-white py-3 rounded-xl font-bold">Save</button>
+                                    <button onClick={() => setEditingSection(null)} className="flex-1 bg-[#f7f7f5] text-[#37352f] py-3 rounded-xl font-bold">Cancel</button>
+                                </div>
+                            </div>
+                        </div>
+                    )}
+                </div>
+            );
+        };
+
+        const root = ReactDOM.createRoot(document.getElementById('root'));
+        root.render(<JazzPracticeApp />);
+
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('sw.js').catch(err => console.log('SW registration failed', err));
+            });
+        }
+    </script>
+</body>
+</html>
